fixed layout jump when changing themes

--- a/src/styles/themes.module.css
+++ b/src/styles/themes.module.css
@@ -1,3 +1,7 @@
+:root {
+  --padding: .25rem;
+}
+
 .primaryTheme {
   --bg-primary: white;
   --bg-secondary: rgba(0, 0, 0, 0.05);
@@ -5,7 +9,6 @@
   --text-primary: #1b004d;
   --text-secondary: rgba(0, 0, 0, 0.6);
   --text-nav: #ddfeff;
-  --padding: .25rem;
   --grey-150: rgba(0, 0, 0, 0.15);
   --grey-400: rgba(0, 0, 0, 0.4);
   --theme-icon: url(/icons/sun.svg);
@@ -27,7 +30,6 @@
   --text-primary: white;
   --text-secondary: rgba(255, 255, 255, 0.8);
   --text-nav: var(--text-secondary);
-  --padding: 8px;
   --theme-icon: url(/icons/moon.svg);
   --markdown-image-background: rgba(255, 255, 255, 0.75);
 }
